@@ -4,6 +4,9 @@ partman-lvm (64) UNRELEASED; urgency=low
   * Add missing source of debconf/confmodule in init.d/lvm-devices.
   * Reset partman-lvm/device_remove_lvm after asking in device_remove_lvm().
   * Use 255 as return code when user backs up in device_remove_lvm().
+  * Use 99 as return code when partman needs to be restarted in
+    device_remove_lvm() instead of doing it directly.
+    Breaks: partman-partitioning (<< 62), partman-md (<< 43)
 
  -- Jérémy Bobbio <lunar@debian.org>  Thu, 21 Aug 2008 21:35:28 +0200
 
